# modern_village

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
appstatic/css/: main.css
appstatic/javascript/: main.js
authentication/: views.py
modern_users/: admin.py  apps.py  forms.py  models.py  views.py
modern_users/migrations/: 0001_initial.py  0002_auto_20201006_2225.py  0002_auto_20201007_1532.py  0002_modernusers_user_pic.py  0003_auto_20201012_2106.py
modern_village/: asgi.py  settings.py  urls.py  wsgi.py
modern_village.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notices/: admin.py  forms.py  models.py  views.py
notices/migrations/: 0001_initial.py  0002_auto_20201006_1631.py  0002_auto_20201012_1654.py  0002_notice_image.py  0002_notice_price.py  0003_auto_20201008_1903.py  0003_auto_20201013_2109.py
post/: admin.py  forms.py  models.py  views.py
post/migrations/: 0001_initial.py  0002_auto_20201006_1701.py
static/css/: main.css
templates/: 404.html  500.html  base.html  commentsview.html  generic_form.html  index.html  notice_detail.html  notices.html  post1.html  posts.html  postview.html  profile.html
