[tool.poetry]
name = "modern_village"
version = "0.1.0"
description = ""
authors = ["Nikal Morgan <nikalmorgan11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
django-mptt = "^0.11.0"
Pillow = "^7.2.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
